# prog-tech

./: .travis.yml  CMakeLists.txt  README.md  build.sh  docker-compose.yml  hello-world.cpp  mailu.env  part2_build.sh  progress.txt  task1-1.sh  task1-2.sh  task1.sh
A/: preparing.py
B/: CMakeLists.txt
C/: main.cpp
part1/: part1_build.sh  part1_clean.sh
part2/: part2_clean.sh
